estefania_fdez/session01/exercise01/mariadb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: mariadb
    service: database
  name: mariadb-deployment
  namespace: exercise-01
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: mariadb
        service: database
    spec:
      containers:
        -
          image: "bitnami/mariadb:latest"
          name: mariadb
          ports:
            -
              containerPort: 3306
              name: mariadb
