estefania_fdez/session01/exercise01/mariadb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-svc
  namespace: exercise-01
  labels:
    app: mariadb
spec:
  type: ClusterIP
  ports:
    - port: 3306
  selector:
    app: mariadb
