estefania_fdez/session01/exercise01/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
  name: nginx-ingress
  namespace: exercise-01
spec:
  rules:
    -
      host: wordpress-exercise-01.com
      http:
        paths:
          -
            backend:
              serviceName: wordpress
              servicePort: 80
            path: /
